[gd_scene load_steps=31 format=2]

[ext_resource path="res://platformer/Platformer.gd" type="Script" id=1]
[ext_resource path="res://music/effects/swap.wav" type="AudioStream" id=2]
[ext_resource path="res://platformer/Layer.gd" type="Script" id=3]
[ext_resource path="res://graphics/tilesets/tileset.tres" type="TileSet" id=10]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://graphics/effects/circle-transition.png" type="Texture" id=12]
[ext_resource path="res://player/Cape.tscn" type="PackedScene" id=13]
[ext_resource path="res://platformer/TileMap.gd" type="Script" id=14]
[ext_resource path="res://graphics/tilesets/blobs_tileset.tres" type="TileSet" id=15]
[ext_resource path="res://platformer/BlobTileMap.gd" type="Script" id=16]
[ext_resource path="res://platformer/Particles2D.gd" type="Script" id=17]
[ext_resource path="res://graphics/effects/white-radial-gradient.png" type="Texture" id=18]
[ext_resource path="res://platformer/EndPosition.gd" type="Script" id=19]
[ext_resource path="res://platformer/Environment.gd" type="Script" id=21]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D mask;
uniform float cutoff: hint_range(0f, 1f);
uniform float smooth_size: hint_range(0f, 1f);

void fragment() {
	float value = texture(mask, UV).r;
	float alpha = smoothstep(cutoff + smooth_size, cutoff, value * (1f - smooth_size) + smooth_size);
	COLOR = vec4(COLOR.rgb, alpha);
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/cutoff = 0.0
shader_param/smooth_size = 0.1
shader_param/mask = ExtResource( 12 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="ShaderMaterial" id=5]

[sub_resource type="ShaderMaterial" id=6]

[sub_resource type="ShaderMaterial" id=7]

[sub_resource type="ShaderMaterial" id=8]

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Layer0:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Layer0:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Layer1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Layer1:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Layer1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Layer0:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Layer0:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Layer0:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Layer1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Layer1:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Layer1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Layer0:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Layer1:light_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Layer0:light_mask")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.305011, 0.640523, 1 )
colors = PoolColorArray( 0.27451, 0.27451, 0.27451, 0, 0.470588, 0.470588, 0.470588, 1, 0.470588, 0.470588, 0.470588, 1, 0.27451, 0.27451, 0.27451, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 160, 90, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 8.0
angular_velocity = 4.57384e-41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 12 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.30719, 0.359477, 0.381264, 0.405229, 0.43573, 1 )
colors = PoolColorArray( 0.388235, 0.388235, 0.388235, 0, 1, 1, 1, 0.109804, 0.996078, 0.996078, 0.996078, 0.137255, 0.992157, 0.992157, 0.992157, 0.0980392, 0.988235, 0.988235, 0.988235, 0.12549, 0.984314, 0.984314, 0.984314, 0.0941176, 0.937255, 0.937255, 0.937255, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 2
emission_box_extents = Vector3( 160, 90, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
angular_velocity = -1.0842e-19
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05
scale_random = 0.05
color_ramp = SubResource( 15 )

[node name="EmptyTemplate" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 11 )]
light_mask = 1
position = Vector2( 20.1168, 32.6082 )
z_index = 100

[node name="Light2D" parent="Player" index="2"]
texture_scale = 0.05

[node name="Camera" parent="Player" index="3"]
visible = true
limit_top = 0
limit_right = 400
limit_bottom = 400

[node name="Hitbox" parent="Player" index="6"]
collision_layer = 2147483649
collision_mask = 30

[node name="ColorRect" parent="Player/RespawnTransition" index="0"]
material = SubResource( 2 )

[node name="Cape" parent="Player" instance=ExtResource( 13 )]

[node name="Layer0" type="Node2D" parent="."]
z_index = 10
script = ExtResource( 3 )

[node name="Blebs" type="Node2D" parent="Layer0"]

[node name="Blobs" type="Node2D" parent="Layer0"]
__meta__ = {
"_edit_lock_": true
}

[node name="Joys" type="Node2D" parent="Layer0"]
__meta__ = {
"_edit_lock_": true
}

[node name="Gravel" type="Node2D" parent="Layer0"]
__meta__ = {
"_edit_lock_": true
}

[node name="MovingBlobs" type="Node2D" parent="Layer0"]
__meta__ = {
"_edit_lock_": true
}

[node name="MovingPlatforms" type="Node2D" parent="Layer0"]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="Layer0"]
modulate = Color( 0, 0, 0, 1 )
material = SubResource( 3 )
z_index = 1
tile_set = ExtResource( 10 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 2
collision_layer = 8
collision_mask = 19
format = 1
tile_data = PoolIntArray( -1, 0, 327680, -65536, 0, 196608, -65535, 0, 196608, -65534, 0, 131072, -65533, 0, 131072, -65532, 0, 65536, -65531, 0, 65537, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 0, 327680, -65524, 0, 1, -65523, 0, 65537, -65522, 0, 65536, -65521, 0, 196609, -65520, 0, 196609, -65519, 0, 131072, -65518, 0, 65536, -65517, 0, 0, -65516, 0, 196609, -65515, 0, 131072, -65514, 0, 65536, -65513, 0, 262146, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65500, 1, 0, -65499, 0, 327681, -65498, 0, 327683, -65497, 1, 0, -65496, 1, 0, -65495, 1, 0, -65494, 1, 0, -65493, 1, 0, -65492, 1, 0, -65491, 1, 0, -65490, 1, 0, -65489, 1, 0, -65488, 1, 0, -65487, 1, 0, -65486, 1, 0, 65535, 0, 196614, 0, 0, 327684, 1, 0, 131074, 2, 0, 2, 3, 0, 131074, 4, 0, 196610, 5, 0, 131075, 6, 0, 65538, 7, 0, 458755, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 458752, 12, 0, 131075, 13, 0, 196610, 14, 0, 196610, 15, 0, 131074, 16, 0, 65538, 17, 0, 65539, 18, 0, 65538, 19, 0, 65538, 20, 0, 196610, 21, 0, 196611, 22, 0, 2, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 0, 0, 35, 0, 0, 36, 0, 393217, 37, 0, 65539, 38, 0, 2, 39, 0, 2, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 131071, 0, 196613, 65536, 0, 65541, 65585, 1, 0, 65586, 1, 0, 196607, 0, 131077, 131072, 0, 6, 131121, 1, 0, 131122, 1, 0, 262143, 0, 196615, 196608, 0, 4, 196657, 1, 0, 196658, 1, 0, 327679, 0, 196615, 262144, 0, 65543, 262193, 1, 0, 262194, 1, 0, 393215, 0, 196612, 327680, 0, 65541, 327729, 1, 0, 327730, 1, 0, 458751, 0, 196613, 393216, 0, 4, 393265, 1, 0, 393266, 1, 0, 524287, 0, 196613, 458752, 0, 65543, 458801, 1, 0, 458802, 1, 0, 589823, 0, 131077, 524288, 0, 65541, 524337, 1, 0, 524338, 1, 0, 655359, 0, 131079, 589824, 0, 65540, 589873, 1, 0, 589874, 1, 0, 720895, 0, 131077, 655360, 0, 65542, 655409, 1, 0, 655410, 1, 0, 786431, 0, 131079, 720896, 0, 65541, 720945, 1, 0, 720946, 1, 0, 851967, 0, 196613, 786432, 0, 7, 786481, 1, 0, 786482, 1, 0, 917503, 0, 196615, 851968, 0, 4, 852017, 1, 0, 852018, 1, 0, 983039, 0, 196615, 917504, 0, 6, 917553, 1, 0, 917554, 1, 0, 1048575, 0, 196615, 983040, 0, 7, 983089, 1, 0, 983090, 1, 0, 1114111, 0, 131077, 1048576, 0, 5, 1048625, 1, 0, 1048626, 1, 0, 1179647, 0, 196614, 1114112, 0, 5, 1114161, 1, 0, 1114162, 1, 0, 1245183, 0, 131079, 1179648, 0, 5, 1179697, 1, 0, 1179698, 1, 0, 1310719, 0, 196614, 1245184, 0, 7, 1245233, 1, 0, 1245234, 1, 0, 1376255, 0, 131078, 1310720, 0, 4, 1310769, 1, 0, 1310770, 1, 0, 1441791, 0, 131079, 1376256, 0, 4, 1376305, 1, 0, 1376306, 1, 0, 1507327, 0, 196615, 1441792, 0, 5, 1441841, 1, 0, 1441842, 1, 0, 1572863, 0, 131076, 1507328, 0, 6, 1507377, 1, 0, 1507378, 1, 0, 1638399, 0, 196614, 1572864, 0, 65540, 1572913, 1, 0, 1572914, 1, 0, 1703935, 0, 196613, 1638400, 0, 7, 1638449, 1, 0, 1638450, 1, 0, 1769471, 0, 131077, 1703936, 0, 6, 1703985, 1, 0, 1703986, 1, 0, 1835007, 0, 131079, 1769472, 0, 65542, 1769521, 1, 0, 1769522, 1, 0, 1900543, 0, 131076, 1835008, 0, 65543, 1835057, 1, 0, 1835058, 1, 0, 1966079, 0, 196615, 1900544, 0, 65543, 1900593, 1, 0, 1900594, 1, 0, 2031615, 0, 196614, 1966080, 0, 6, 1966129, 1, 0, 1966130, 1, 0, 2097151, 0, 196614, 2031616, 0, 5, 2031665, 1, 0, 2031666, 1, 0, 2162687, 0, 458752, 2097152, 0, 393219, 2097201, 1, 0, 2097202, 1, 0, 2228223, 1, 0, 2162688, 1, 0, 2162737, 1, 0, 2162738, 1, 0, 2293759, 1, 0, 2228224, 1, 0, 2228273, 1, 0, 2228274, 1, 0, 2359295, 1, 0, 2293760, 1, 0, 2293809, 1, 0, 2293810, 1, 0, 2424831, 1, 0, 2359296, 1, 0, 2359345, 1, 0, 2359346, 1, 0, 2490367, 1, 0, 2424832, 1, 0, 2424881, 1, 0, 2424882, 1, 0, 2555903, 1, 0, 2490368, 1, 0, 2490417, 1, 0, 2490418, 1, 0, 2621439, 1, 0, 2555904, 1, 0, 2555953, 1, 0, 2555954, 1, 0, 2686975, 1, 0, 2621440, 1, 0, 2621489, 1, 0, 2621490, 1, 0, 2752511, 1, 0, 2686976, 1, 0, 2687025, 1, 0, 2687026, 1, 0, 2818047, 1, 0, 2752512, 1, 0, 2752561, 1, 0, 2752562, 1, 0, 2883583, 1, 0, 2818048, 1, 0, 2818097, 1, 0, 2818098, 1, 0, 2949119, 1, 0, 2883584, 1, 0, 2883633, 1, 0, 2883634, 1, 0, 3014655, 1, 0, 2949120, 1, 0, 2949169, 1, 0, 2949170, 1, 0, 3080191, 1, 0, 3014656, 1, 0, 3014705, 1, 0, 3014706, 1, 0, 3145727, 1, 0, 3080192, 1, 0, 3080241, 1, 0, 3080242, 1, 0, 3211263, 1, 0, 3145728, 1, 0, 3145777, 1, 0, 3145778, 1, 0, 3276799, 1, 0, 3211264, 1, 0, 3211265, 1, 0, 3211266, 1, 0, 3211267, 1, 0, 3211268, 1, 0, 3211269, 1, 0, 3211270, 1, 0, 3211271, 1, 0, 3211272, 1, 0, 3211273, 1, 0, 3211274, 1, 0, 3211275, 1, 0, 3211276, 1, 0, 3211277, 1, 0, 3211278, 1, 0, 3211279, 1, 0, 3211280, 1, 0, 3211281, 1, 0, 3211282, 1, 0, 3211283, 1, 0, 3211284, 1, 0, 3211285, 1, 0, 3211286, 1, 0, 3211287, 1, 0, 3211288, 1, 0, 3211289, 1, 0, 3211290, 1, 0, 3211291, 1, 0, 3211292, 1, 0, 3211293, 1, 0, 3211294, 1, 0, 3211295, 1, 0, 3211296, 1, 0, 3211297, 1, 0, 3211298, 1, 0, 3211299, 1, 0, 3211300, 1, 0, 3211301, 1, 0, 3211302, 1, 0, 3211303, 1, 0, 3211304, 1, 0, 3211305, 1, 0, 3211306, 1, 0, 3211307, 1, 0, 3211308, 1, 0, 3211309, 1, 0, 3211310, 1, 0, 3211311, 1, 0, 3211312, 1, 0, 3211313, 1, 0, 3211314, 1, 0, 3342335, 1, 0, 3276800, 1, 0, 3276801, 1, 0, 3276802, 1, 0, 3276803, 1, 0, 3276804, 1, 0, 3276805, 1, 0, 3276806, 1, 0, 3276807, 1, 0, 3276808, 1, 0, 3276809, 1, 0, 3276810, 1, 0, 3276811, 1, 0, 3276812, 1, 0, 3276813, 1, 0, 3276814, 1, 0, 3276815, 1, 0, 3276816, 1, 0, 3276817, 1, 0, 3276818, 1, 0, 3276819, 1, 0, 3276820, 1, 0, 3276821, 1, 0, 3276822, 1, 0, 3276823, 1, 0, 3276824, 1, 0, 3276825, 1, 0, 3276826, 1, 0, 3276827, 1, 0, 3276828, 1, 0, 3276829, 1, 0, 3276830, 1, 0, 3276831, 1, 0, 3276832, 1, 0, 3276833, 1, 0, 3276834, 1, 0, 3276835, 1, 0, 3276836, 1, 0, 3276837, 1, 0, 3276838, 1, 0, 3276839, 1, 0, 3276840, 1, 0, 3276841, 1, 0, 3276842, 1, 0, 3276843, 1, 0, 3276844, 1, 0, 3276845, 1, 0, 3276846, 1, 0, 3276847, 1, 0, 3276848, 1, 0, 3276849, 1, 0, 3276850, 1, 0 )
script = ExtResource( 14 )
__meta__ = {
"_edit_bone_": true,
"_edit_lock_": true
}

[node name="VineTileMap" type="TileMap" parent="Layer0"]
material = SubResource( 4 )
z_index = 1
format = 1

[node name="BlobTileMap" type="TileMap" parent="Layer0"]
material = SubResource( 5 )
tile_set = ExtResource( 15 )
cell_size = Vector2( 4, 4 )
cell_quadrant_size = 2
format = 1
tile_data = PoolIntArray( 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1638401, 1, 0, 1638402, 1, 0, 1638403, 1, 0, 1638404, 1, 0, 1703939, 1, 0, 1703940, 1, 0, 3669697, 0, 0 )
script = ExtResource( 16 )

[node name="Environment" type="Node2D" parent="Layer0"]
z_index = -20
script = ExtResource( 21 )

[node name="Layer1" type="Node2D" parent="."]
light_mask = 32
script = ExtResource( 3 )

[node name="Blebs" type="Node2D" parent="Layer1"]
__meta__ = {
"_edit_lock_": true
}

[node name="Blobs" type="Node2D" parent="Layer1"]
__meta__ = {
"_edit_lock_": true
}

[node name="Joys" type="Node2D" parent="Layer1"]
__meta__ = {
"_edit_lock_": true
}

[node name="Gravel" type="Node2D" parent="Layer1"]
__meta__ = {
"_edit_lock_": true
}

[node name="MovingBlobs" type="Node2D" parent="Layer1"]
__meta__ = {
"_edit_lock_": true
}

[node name="MovingPlatforms" type="Node2D" parent="Layer1"]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="Layer1"]
modulate = Color( 0, 0, 0, 1 )
light_mask = 32
material = SubResource( 6 )
z_index = 1
tile_set = ExtResource( 10 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 2
collision_layer = 256
collision_mask = 608
occluder_light_mask = 32
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65500, 1, 0, -65499, 1, 0, -65498, 1, 0, -65497, 1, 0, -65496, 1, 0, -65495, 1, 0, -65494, 1, 0, -65493, 1, 0, -65492, 1, 0, -65491, 1, 0, -65490, 1, 0, -65489, 1, 0, -65488, 1, 0, -65487, 1, 0, -65486, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 131071, 1, 0, 65536, 1, 0, 65585, 1, 0, 65586, 1, 0, 196607, 1, 0, 131072, 1, 0, 131121, 1, 0, 131122, 1, 0, 262143, 1, 0, 196608, 1, 0, 196657, 1, 0, 196658, 1, 0, 327679, 1, 0, 262144, 1, 0, 262193, 1, 0, 262194, 1, 0, 393215, 1, 0, 327680, 1, 0, 327729, 1, 0, 327730, 1, 0, 458751, 1, 0, 393216, 1, 0, 393265, 1, 0, 393266, 1, 0, 524287, 1, 0, 458752, 1, 0, 458801, 1, 0, 458802, 1, 0, 589823, 1, 0, 524288, 1, 0, 524337, 1, 0, 524338, 1, 0, 655359, 1, 0, 589824, 1, 0, 589873, 1, 0, 589874, 1, 0, 720895, 1, 0, 655360, 1, 0, 655409, 1, 0, 655410, 1, 0, 786431, 1, 0, 720896, 1, 0, 720945, 1, 0, 720946, 1, 0, 851967, 1, 0, 786432, 1, 0, 786481, 1, 0, 786482, 1, 0, 917503, 1, 0, 851968, 1, 0, 852017, 1, 0, 852018, 1, 0, 983039, 1, 0, 917504, 1, 0, 917553, 1, 0, 917554, 1, 0, 1048575, 1, 0, 983040, 1, 0, 983089, 1, 0, 983090, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048625, 1, 0, 1048626, 1, 0, 1179647, 1, 0, 1114112, 1, 0, 1114161, 1, 0, 1114162, 1, 0, 1245183, 1, 0, 1179648, 1, 0, 1179697, 1, 0, 1179698, 1, 0, 1310719, 1, 0, 1245184, 1, 0, 1245233, 1, 0, 1245234, 1, 0, 1376255, 1, 0, 1310720, 1, 0, 1310769, 1, 0, 1310770, 1, 0, 1441791, 1, 0, 1376256, 1, 0, 1376305, 1, 0, 1376306, 1, 0, 1507327, 1, 0, 1441792, 1, 0, 1441841, 1, 0, 1441842, 1, 0, 1572863, 1, 0, 1507328, 1, 0, 1507377, 1, 0, 1507378, 1, 0, 1638399, 1, 0, 1572864, 1, 0, 1572913, 1, 0, 1572914, 1, 0, 1703935, 1, 0, 1638400, 1, 0, 1638449, 1, 0, 1638450, 1, 0, 1769471, 1, 0, 1703936, 1, 0, 1703985, 1, 0, 1703986, 1, 0, 1835007, 1, 0, 1769472, 1, 0, 1769521, 1, 0, 1769522, 1, 0, 1900543, 1, 0, 1835008, 1, 0, 1835057, 1, 0, 1835058, 1, 0, 1966079, 1, 0, 1900544, 1, 0, 1900593, 1, 0, 1900594, 1, 0, 2031615, 1, 0, 1966080, 1, 0, 1966129, 1, 0, 1966130, 1, 0, 2097151, 1, 0, 2031616, 1, 0, 2031665, 1, 0, 2031666, 1, 0, 2162687, 1, 0, 2097152, 1, 0, 2097201, 1, 0, 2097202, 1, 0, 2228223, 1, 0, 2162688, 1, 0, 2162737, 1, 0, 2162738, 1, 0, 2293759, 1, 0, 2228224, 1, 0, 2228273, 1, 0, 2228274, 1, 0, 2359295, 1, 0, 2293760, 1, 0, 2293809, 1, 0, 2293810, 1, 0, 2424831, 1, 0, 2359296, 1, 0, 2359345, 1, 0, 2359346, 1, 0, 2490367, 1, 0, 2424832, 1, 0, 2424881, 1, 0, 2424882, 1, 0, 2555903, 1, 0, 2490368, 1, 0, 2490417, 1, 0, 2490418, 1, 0, 2621439, 1, 0, 2555904, 1, 0, 2555953, 1, 0, 2555954, 1, 0, 2686975, 1, 0, 2621440, 1, 0, 2621489, 1, 0, 2621490, 1, 0, 2752511, 1, 0, 2686976, 1, 0, 2687025, 1, 0, 2687026, 1, 0, 2818047, 1, 0, 2752512, 1, 0, 2752561, 1, 0, 2752562, 1, 0, 2883583, 1, 0, 2818048, 1, 0, 2818097, 1, 0, 2818098, 1, 0, 2949119, 1, 0, 2883584, 1, 0, 2883633, 1, 0, 2883634, 1, 0, 3014655, 1, 0, 2949120, 1, 0, 2949169, 1, 0, 2949170, 1, 0, 3080191, 1, 0, 3014656, 1, 0, 3014705, 1, 0, 3014706, 1, 0, 3145727, 1, 0, 3080192, 1, 0, 3080241, 1, 0, 3080242, 1, 0, 3211263, 1, 0, 3145728, 1, 0, 3145777, 1, 0, 3145778, 1, 0, 3276799, 1, 0, 3211264, 1, 0, 3211265, 1, 0, 3211266, 1, 0, 3211267, 1, 0, 3211268, 1, 0, 3211269, 1, 0, 3211270, 1, 0, 3211271, 1, 0, 3211272, 1, 0, 3211273, 1, 0, 3211274, 1, 0, 3211275, 1, 0, 3211276, 1, 0, 3211277, 1, 0, 3211278, 1, 0, 3211279, 1, 0, 3211280, 1, 0, 3211281, 1, 0, 3211282, 1, 0, 3211283, 1, 0, 3211284, 1, 0, 3211285, 1, 0, 3211286, 1, 0, 3211287, 1, 0, 3211288, 1, 0, 3211289, 1, 0, 3211290, 1, 0, 3211291, 1, 0, 3211292, 1, 0, 3211293, 1, 0, 3211294, 1, 0, 3211295, 1, 0, 3211296, 1, 0, 3211297, 1, 0, 3211298, 1, 0, 3211299, 1, 0, 3211300, 1, 0, 3211301, 1, 0, 3211302, 1, 0, 3211303, 1, 0, 3211304, 1, 0, 3211305, 1, 0, 3211306, 1, 0, 3211307, 1, 0, 3211308, 1, 0, 3211309, 1, 0, 3211310, 1, 0, 3211311, 1, 0, 3211312, 1, 0, 3211313, 1, 0, 3211314, 1, 0, 3342335, 1, 0, 3276800, 1, 0, 3276801, 1, 0, 3276802, 1, 0, 3276803, 1, 0, 3276804, 1, 0, 3276805, 1, 0, 3276806, 1, 0, 3276807, 1, 0, 3276808, 1, 0, 3276809, 1, 0, 3276810, 1, 0, 3276811, 1, 0, 3276812, 1, 0, 3276813, 1, 0, 3276814, 1, 0, 3276815, 1, 0, 3276816, 1, 0, 3276817, 1, 0, 3276818, 1, 0, 3276819, 1, 0, 3276820, 1, 0, 3276821, 1, 0, 3276822, 1, 0, 3276823, 1, 0, 3276824, 1, 0, 3276825, 1, 0, 3276826, 1, 0, 3276827, 1, 0, 3276828, 1, 0, 3276829, 1, 0, 3276830, 1, 0, 3276831, 1, 0, 3276832, 1, 0, 3276833, 1, 0, 3276834, 1, 0, 3276835, 1, 0, 3276836, 1, 0, 3276837, 1, 0, 3276838, 1, 0, 3276839, 1, 0, 3276840, 1, 0, 3276841, 1, 0, 3276842, 1, 0, 3276843, 1, 0, 3276844, 1, 0, 3276845, 1, 0, 3276846, 1, 0, 3276847, 1, 0, 3276848, 1, 0, 3276849, 1, 0, 3276850, 1, 0 )
script = ExtResource( 14 )
__meta__ = {
"_edit_bone_": true,
"_edit_lock_": true
}

[node name="VineTileMap" type="TileMap" parent="Layer1"]
material = SubResource( 7 )
z_index = 1
format = 1

[node name="BlobTileMap" type="TileMap" parent="Layer1"]
light_mask = 32
material = SubResource( 8 )
tile_set = ExtResource( 15 )
cell_size = Vector2( 4, 4 )
cell_quadrant_size = 2
occluder_light_mask = 32
format = 1
tile_data = PoolIntArray( 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1638401, 1, 0, 1638402, 1, 0, 1638403, 1, 0, 1638404, 1, 0, 1703939, 1, 0, 1703940, 1, 0, 3669697, 0, 0 )
script = ExtResource( 16 )

[node name="Environment" type="Node2D" parent="Layer1"]
z_index = -20
script = ExtResource( 21 )

[node name="Swapper" type="AnimationPlayer" parent="."]
anims/swap_to_0 = SubResource( 9 )
anims/swap_to_1 = SubResource( 10 )

[node name="SoundEffect" type="AudioStreamPlayer" parent="Swapper"]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="DustParticles" type="Particles2D" parent="."]
position = Vector2( 160, 90 )
z_index = 1
local_coords = false
process_material = SubResource( 13 )
script = ExtResource( 17 )

[node name="LightParticles" type="Particles2D" parent="."]
position = Vector2( 160, 90 )
z_index = 1
amount = 2
lifetime = 7.0
local_coords = false
process_material = SubResource( 16 )
texture = ExtResource( 18 )
script = ExtResource( 17 )

[node name="EndPositions" type="Node2D" parent="."]

[node name="EndPosition1" type="Position2D" parent="EndPositions"]
position = Vector2( 400, 384 )
script = ExtResource( 19 )

[node name="Text1" type="Node2D" parent="."]
position = Vector2( 79.8375, 25.8628 )

[node name="Pos" type="Node2D" parent="Text1"]
position = Vector2( -42.8375, 62.1372 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 320, 180 )
motion_mirroring = Vector2( 640, 360 )

[node name="background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
centered = false

[editable path="Player"]
[editable path="Player/AnimatedSprite"]
